--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -21,6 +21,7 @@
     <string name="preference_key_announcement_country_override">announcementCountryOverride</string>
     <string name="preference_key_announcement_ignore_date">announcementIgnoreDate</string>
     <string name="preference_key_announcement_version_code">announcementVersionCode</string>
+    <string name="preference_key_use_tor">useTor</string>
     <string name="preference_key_use_restbase">useRestbase</string>
     <string name="preference_key_use_restbase_manual">useRestbase_setManually</string>
     <string name="preference_key_restbase_ticket">restbaseTicket</string>
