implmented basic ui for pluggable transport settings

--- a/app/src/main/res/values/preference_keys.xml
+++ b/app/src/main/res/values/preference_keys.xml
@@ -99,4 +99,6 @@
     <string name="preference_key_show_bookmark_tooltip">showBookmarkTooltip</string>
     <string name="preference_key_overflow_reading_lists_option_click_count">overflowReadingListsClickCount</string>
     <string name="preference_key_history_offline_articles_toast">historyOfflineArticlesToast</string>
+    <string name="preference_key_pluggable_transport_enabled">pluggableTransportsEnabled</string>
+    <string name="preference_key_pluggable_transport_bridge_line">pluggableTransportsBridgeLine</string>
 </resources>
